rankIT-app/main/default/objects/RankIt_Settings__mdt/RankIt_Settings__mdt.object-meta.xml
<CustomObject>
    <label>RankIt Setting</label>
    <pluralLabel>RankIt Settings</pluralLabel>
</CustomObject>