rankIT-app/main/default/objects/RankIt_Settings__mdt/fields/ActiveInd__c.field-meta.xml
<CustomField>
    <fullName>ActiveInd__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Ind</label>
    <type>Checkbox</type>
</CustomField>