rankIT-app/main/default/objects/RankIt_Settings__mdt/fields/Filter__c.field-meta.xml
<CustomField>
    <fullName>Filter__c</fullName>
    <inlineHelpText>The WHERE clause of the soql query</inlineHelpText>
    <label>Filter</label>
    <type>TextArea</type>
</CustomField>