rankIT-app/main/default/objects/RankIt_Settings__mdt/fields/Include_In_Tests__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Tests__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if you want these rules included in deployment tests</inlineHelpText>
    <label>Include In Tests?</label>
    <type>Checkbox</type>
</CustomField>