rankIT-app/main/default/objects/RankIt_Settings__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <label>Source Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>